Implement recurring expense management features: - Added RecurringExpense entity and corresponding DAO for database operations. - Introduced RecurrenceScheduler to handle scheduling and generation of recurring expenses. - Updated MainActivity to initialize recurring expense scheduling and manage background permission dialogs. - Created RecurringExpensesFragment and ViewModel for displaying and managing recurring expenses. - Enhanced UI components to support recurring expense entry and display, including new layout files and adapters. - Integrated WorkManager for background processing of recurring expenses. - Updated dependencies in build.gradle for WorkManager support.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ material = "1.10.0"
 navigation = "2.7.6"
 room = "2.6.1"
 synth = "1.0.0"
+work = "2.9.0"
 
 [libraries]
 androidx-appcompat = {group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat"}
@@ -39,7 +40,11 @@ androidx-navigation-ui-ktx = {group = "androidx.navigation", name = "navigation-
 # Activity and Fragment
 androidx-activity-ktx = {group = "androidx.activity", name = "activity-ktx", version.ref = "activity"}
 androidx-fragment-ktx = {group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragment"}
-synth = { group = "club.cred.android", name = "synth", version.ref = "synth" }
+
+# WorkManager
+androidx-work-runtime-ktx = {group = "androidx.work", name = "work-runtime-ktx", version.ref = "work"}
+
+synth = {group = "club.cred.android", name = "synth", version.ref = "synth"}
 
 [plugins]
 android-application = {id = "com.android.application", version.ref = "agp"}
