--- a/.gitignore
+++ b/.gitignore
@@ -48,10 +48,15 @@ captures/
 # Comment next line if keeping position of elements in Navigation Editor is relevant for you
 .idea/navEditor.xml
 
-# Keystore files
-# Uncomment the following lines if you do not want to check your keystore files in.
-#*.jks
-#*.keystore
+# Keystore files - NEVER commit these to version control
+*.jks
+*.keystore
+keystore.properties
+release-keystore.jks
+
+# Room database schemas - commit these for migration tracking
+# Remove this line if you want to track schema files
+# app/schemas/
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
